--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ version: 1.0.0+1
 environment:
   sdk: ">=3.4.0 <4.0.0"
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.6
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   provider: ^6.1.2
 dev_dependencies:
   flutter_lints: ^3.0.0
