--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
