--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
   http: ^1.2.1
   provider: ^6.1.2
 dev_dependencies:
